--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 		integrity="sha512-GffPMF3RvMeYyc1LWMHtK8EbPv0iNZ8/oTtHPx9/cc2ILxQ+u905qIwdpULaqDkyBKgOaB57QTMg7ztg8Jm2Og=="
 		crossorigin=""></script>
 
+	<script src="./territories.js"></script>
 	<script src="./main.js"></script>
 </head>
 
@@ -45,117 +46,28 @@
 		<div class="row">
 			<div style="overflow: scroll;" id="menu">
 				<div class="menu-section">
-					<p class="menu-text menu-title guild-name">Wynncraft Map Maker Utility</p>
-					<p class="menu-text guild-name">Version 1.0.3</p>
-					<div id="guild-leaderboard" class="menu-text guild-name">
-						<button id="help" class="btn btn-primary" data-toggle="popover" title="Wynn Map Maker Controls"
-							data-content="
-						<div>
-							Spacebar - Toggles Sidebar
-							<br>
-							H - Toggles guild tag visibility
-							<br>
-							L - Toggle map legend
-						</div>
-						" data-html="true">Help</button>
-						<br>
-						<br>
-						<div>
-							<input id="file-button" type="file" hidden="hidden">
-							<button type="button" id="import-button" class="btn btn-primary">Import</button>
-							<button class="btn btn-primary" onclick="exportMap()">Export</button>
-						</div>
-					</div>
+					<p class="menu-text menu-title guild-name">Wynncraft 1.20 Map</p>
+					<p class="menu-text guild-name">Version 1.0.0</p>
 				</div>
 				<hr style="width: 100%; color: black; height: 1px; background-color:white;" />
-				<div class="menu-section">
-					<p id="currentTerritory" class="menu-text menu-title guild-name">Select 1 or more territory to edit
-					</p>
-					<div>
-						<span style="visibility: hidden;" id="enable-button" class="menu-text guild-name"> (W.I.P.)
-							Enabled: <input type="checkbox" checked="true" id="territory-toggle"></span><br>
-						<span style="visibility: hidden;" id="terr-select" class="menu-text guild-name">Territory Owner:
-							<select id="guilds">
-								<option value="null">None</option>
-							</select></span> <br>
-						<button class="btn btn-primary" onclick="rectangleselect = !rectangleselect">Toggle rectangle
-							selection tool</button><br>
-						<button class="btn btn-primary" onclick="removeselectionmarkers()">Remove all selection
-							markers</button><br>
-						<button class="btn btn-primary" onclick="removeselections()">Remove all selections</button>
-					</div>
-				</div>
-				<hr style="width: 100%; color: black; height: 1px; background-color:white;" />
-				<div class="menu-section">
-					<p class="menu-text menu-title guild-name">Manage Guilds:</p>
-					<div>
-						<span class="section-title guild-name">Add Guild:</span>
-						<!--<p class="menu-text">Dev note: add a place to add and remove guilds and set their colors</p>-->
-						<br>
-						<div>
-							<label class="menu-text input-label" for="name">Guild Prefix:</label>
-							<input class="add-guild" type="text" id="name" name="name" maxlength=3
-								placeholder="Ex. Fox"><br>
-							<label class="menu-text input-label" for="color">Map color:</label>
-							<input type="color" id="color" name="color">
-						</div>
-						<br>
-						<button class="btn btn-primary" onclick="addguild()">Add</button>
-						<br><br>
-						<div class="guild-select"><span class="section-title guild-name">Change Guild Color:</span><br>
-							<select class="guild-select" id="changeguild">
-								<option value="null">--</option>
-							</select>
-							<input type="color" id="changecolor" name="color"><br><br>
-						</div>
-						<button class="btn btn-primary" onclick="changecolor()">Change</button>
-						<br><br>
-						<div class="guild-select">
-							<span class="section-title guild-name">Remove Guild:</span>
-							<select id="removeguild">
-								<option value="null">--</option>
-							</select><br><br>
-						</div>
-						<button class="btn btn-primary" onclick="removeguild()">Remove</button>
-					</div>
-				</div>
-				<hr style="width: 100%; color: black; height: 1px; background-color:white;" />
-				<div class="menu-section">
-					<p class="menu-text menu-title guild-name">Commands</p>
-					<div>
-						<button class="btn btn-primary" onclick="pullApi()">Pull From Wynn API</button>
-						<p id="api-loading" class="menu-text guild-name"></p>
-					</div>
-				</div>
+				<input id="showr" class="input-button" type="button" value="Show routes" onclick="showr()">
+				<input id="shown" class="input-button" type="button" value="Show territory names" onclick="shownames()">
 				<hr style="width: 100%; color: black; height: 1px; background-color:white;" />
 				<div class="menu-section">
 					<p class="menu-text menu-title guild-name">Credits</p>
 					<div>
 						<p class="menu-text guild-name">
-							<b>Developers:</b> Nitrogen2Oxygen & bolyai of the HM Royal Engineers of Fox<br><br>
+							<b>Developers:</b> bolyai of the HM Royal Engineers of Fox<br><br>
 							<b>Special Thanks:</b><br>
 							<a href="https://wynndata.tk/map" target="_blank">Wynndata.tk</a> for providing the 2D
 							map<br>
 							<a href="https://br0kenmotor.github.io/map" target="_blank">br0kenmotor.github.io</a> for
 							the original map layout<br>
 							<br><br>
-							Report bugs to @Nitro#6904 or @bolyai#8857 on Discord<br>
+							@bolyai#8857<br>
 							Unaffiliated with the Wynncraft server
 						</p>
 					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div class="container">
-		<div class="row">
-			<div style="overflow: scroll;" id="legend">
-				<div class="menu-section">
-					<p class="menu-text menu-title guild-name">Map Legend</p>
-					<button class="btn btn-primary" onclick="reloadLegend()">Reload</button>
-					<ul style="padding-inline-start: 0px;" id="guild-list">
-
-					</ul>
 				</div>
 			</div>
 		</div>
