--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 		integrity="sha512-GffPMF3RvMeYyc1LWMHtK8EbPv0iNZ8/oTtHPx9/cc2ILxQ+u905qIwdpULaqDkyBKgOaB57QTMg7ztg8Jm2Og=="
 		crossorigin=""></script>
 
+	<script src="./newterrs.js"></script>
 	<script src="./territories.js"></script>
 	<script src="./main.js"></script>
 </head>
