--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
 		integrity="sha512-GffPMF3RvMeYyc1LWMHtK8EbPv0iNZ8/oTtHPx9/cc2ILxQ+u905qIwdpULaqDkyBKgOaB57QTMg7ztg8Jm2Og=="
 		crossorigin=""></script>
 
+	<script src="./leaflet-geometryutil.js"></script>
+	<script src="./leaflet-arrowheads.js"></script>
+
 	<script src="./newterrs.js"></script>
 	<script src="./territories.js"></script>
 	<script src="./main.js"></script>
