--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
 
 	<meta charset="utf-8" />
 	<meta name="description" content="Wynncraft 1.20 BETA Map">
-	<meta name="keywords" content="wynn,map,maker,territories">
 	<meta name="author" content="bolyai">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta property="og:title" content="Wynn Map Maker">
+	<meta property="og:title" content="Wynn 1.20 Map">
 
 	<link rel="icon" href="favicon.ico">
 
