--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 
 <head>
 
-	<title>Wynncraft 1.20 BETA Map</title>
+	<title>Wynncraft 1.20 Map</title>
 
 
 	<link rel="stylesheet" type="text/css" href="./main.css" />
 
 	<meta charset="utf-8" />
-	<meta name="description" content="Wynncraft 1.20 BETA Map">
+	<meta name="description" content="Wynncraft 1.20 Map">
 	<meta name="author" content="bolyai">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta property="og:title" content="Wynn 1.20 Map">
@@ -48,11 +48,11 @@
 			<div style="overflow: scroll;" id="menu">
 				<div class="menu-section">
 					<p class="menu-text menu-title guild-name">Wynncraft 1.20 Map</p>
-					<p class="menu-text guild-name">Version 2.1.1</p>
+					<p class="menu-text guild-name">Version 2.2.1</p>
 				</div>
 				<hr style="width: 100%; color: black; height: 1px; background-color:white;" />
 				<h2 style="color: white; text-align:center">Map mode</h2><br>
-				<p style="color: red;text-align: center;font-style: oblique;">Includes all 1.20 terrs with correct borders except the 8 Realm of light territories</p>
+				<p style="color: red;text-align: center;font-style: oblique;"><b>Includes all 1.20 terrs with correct borders except the 8 Realm of light territories</b></p>
 				<input style="width: 100%"; id="changemode" class="input-button" type="button" value="Change to: Resource map" onclick="changemode()">
 				<p style="color: white;text-align: center;margin-top: 10px;">Color meanings:<br>Yellow: Crops<br>Blue: Fish<br>Gray: Ores<br>Brown: Wood<br><br><b>If the territory has a green border, it has double resource or emerald rate.</b><br><br>Click on any territory to show advanced details</p>
 				<hr style="width: 100%; color: black; height: 1px; background-color:white;" />
@@ -74,12 +74,10 @@
 					<p class="menu-text menu-title guild-name">Credits</p>
 					<div>
 						<p class="menu-text guild-name">
-							<b>Developers:</b> bolyai of the HM Royal Engineers of Fox<br><br>
+							<b>Developers:</b> bolyai<br><br>
 							<b>Special Thanks:</b><br>
-							<a href="https://wynndata.tk/map" target="_blank">Wynndata.tk</a> for providing the 2D
+							<a href="https://wynntils.com/" target="_blank">Wynntils</a> for providing the 2D
 							map<br>
-							<a href="https://br0kenmotor.github.io/map" target="_blank">br0kenmotor.github.io</a> for
-							the original map layout<br>
 							<br><br>
 							bolyai#8857<br>
 							Unaffiliated with the Wynncraft server
