--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	<script src="./leaflet-geometryutil.js"></script>
 	<script src="./leaflet-arrowheads.js"></script>
 
-	<script src="./newterrs.js"></script>
+	<!--<script src="./newterrs.js"></script>-->
 	<script src="./territories.js"></script>
 	<script src="./main.js"></script>
 </head>
@@ -52,7 +52,6 @@
 				</div>
 				<hr style="width: 100%; color: black; height: 1px; background-color:white;" />
 				<h2 style="color: white; text-align:center">Map mode</h2><br>
-				<p style="color: red;text-align: center;font-style: oblique;"><b>Includes all 1.20 terrs with correct borders except the 8 Realm of light territories</b></p>
 				<input style="width: 100%"; id="changemode" class="input-button" type="button" value="Change to: Resource map" onclick="changemode()">
 				<p style="color: white;text-align: center;margin-top: 10px;">Color meanings:<br>Yellow: Crops<br>Blue: Fish<br>Gray: Ores<br>Brown: Wood<br><br><b>If the territory has a green border, it has double resource or emerald rate.</b><br><br>Click on any territory to show advanced details</p>
 				<hr style="width: 100%; color: black; height: 1px; background-color:white;" />
