--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	<script src="./leaflet-geometryutil.js"></script>
 	<script src="./leaflet-arrowheads.js"></script>
 
-	<!--<script src="./newterrs.js"></script>-->
+	<script src="./colors.js"></script>
 	<script src="./territories.js"></script>
 	<script src="./main.js"></script>
 </head>
